[package]
name = "locc"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "CLI for counting lines of code per language"
keywords = ["cli", "lines-of-code", "loc", "tokei", "language-stats"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/Quippy22/locc"

[dependencies]
ignore = "0.4.31"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
